--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,15 @@
       <artifactId>jasper-el</artifactId>
       <version>6.0.26</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
     <dependency>
-      <groupId>org.hibernate.validator</groupId>
+      <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>6.0.13.Final</version>
+      <version>5.0.3.Final</version>
     </dependency>
+
+
   </dependencies>
   <build>
     <plugins>
